do some changes

--- a/indeximg.html
+++ b/indeximg.html
@@ -10,10 +10,10 @@
     <section class="flex flex-col justify-start items-start pb-16 sm:pb-0">
         <img class="relative w-full  h-[700px] sm:h-[900px] md:h-[980px] lg:h-[880px]" src="Contact - Details 1.png" alt="background-pic" loading="lazy">
         <div class="absolute w-full">
-            <header class="flex justify-between items-center px-12 py-6 font-sans">
+            <header class="flex justify-between items-center px-20 py-6 font-sans">
                 <img class="" src="Layer_1.png" alt="logo">
                 <div class="hidden lg:flex gap-10">
-                    <ul class="font-medium text-[15px] flex items-center gap-5">
+                    <ul class="font-medium text-[15px] flex items-center gap-12">
                         <li class="text-black hover:text-[#2286E0]"><a href="driver-shaft.html">Home</a></li>
                         <li class="text-black hover:text-[#2286E0]"><a href="fairway-wood-shaft.html">Features</a></li>
                         <li class="text-black hover:text-[#2286E0]"><a href="online-fitting.html">Modules</a></li>
@@ -31,10 +31,10 @@
                     <li class="hover:text-[#2286E0]"><a href="find-a-fitter.html">Benefits</a></li>
                 </ul>
             </div>
-            <div class="pt-24 flex justify-center text-center">
+            <div class="pt-[90px] flex justify-center text-center">
                 <h2 class="text-3xl sm:text-[42px] font-bold">Contact</h2>
             </div>
-            <div class="grid lg:flex justify-center gap-16 lg:gap-18 pt-20 px-10 lg:px-0">
+            <div class="grid lg:flex justify-center gap-16 lg:gap-32 pt-20 px-10 lg:px-0">
                 <div class="items-center block sm:flex justify-start lg:justify-center">
                     <p class="text-xl sm:text-3xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[400px] leading-8 sm:leading-10">Relational data connections create new insights. 
                     Information becomes easily accessible with little effort.</p>
@@ -43,20 +43,20 @@
             </div>
         </div>
     </section>
-    <section class="bg-[#111827] block lg:flex justify-center items-center gap-32 pt-16 lg:pt-8 pb-20 lg:pb-0 px-12 lg:px-0 h-auto lg:h-[500px]">
-        <img class="" alt="chatgroup" src="Group 455 (1).png">
+    <section class="bg-[#111827] block lg:flex justify-center items-center gap-32 pt-16 lg:pt-8 pb-20 lg:pb-0 px-12 lg:px-0 h-auto lg:h-[420px]">
+        <img class="max-w-[570px] max-h-[592px]" alt="chatgroup" src="Group 455 (1).png">
         <div class="grid justify-start lg:justify-center items-center">
             <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-white max-w-4xl lg:max-w-[430px] leading-8 sm:leading-10">Employees, companies and contacts 
             are connected with each other at a central point, a non-existent view is created.</p>
         </div>
     </section>
-    <section class="pt-36 px-8 lg:px-28 lg:px-14">
+    <section class="pt-36 px-8 lg:px-28 lg:px-14 flex flex-col">
         <div class=" pb-10">
             <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[900px] leading-8 sm:leading-10">Create project lists of your contacts and employees, 
             filter by project participants and their roles. Synchronize contact information with Outlook* and 
             stay up to date.</p>
         </div>
-        <div class=" flex justify-center items-center">
+        <div class="flex justify-center items-center">
             <img class="w-full" alt="Rectangle" src="Screenshot 2024-06-25 141840.png">
         </div>
     </section>
@@ -76,11 +76,11 @@
                 <div class="flex gap-8 items-center justify-center">
                     <img class="hidden lg:block" alt="" src="fi_12581577.png">
                     <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-white max-w-2xl md:max-w-4xl lg:max-w-[560px] leading-8 sm:leading-10">contacts can be synced to mobile device. Lorem ipsum dolor sit amet, consectetur 
-                        adipiscing elit quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
+                    adipiscing elit quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
-       </div>
+        </div>
+    </div>
     </section>
     <section class="block lg:flex justify-center gap-8 md:gap-32 px-8 lg:px-0">
         <div class="block lg:flex justify-center items-center mb-20 lg:mb-0">
@@ -103,16 +103,16 @@
             <p class="font-normal text-[15px] text-white">Modules</p>
             <p class="font-normal text-[15px] text-white">Benefits</p>
         </div>
-        <div class="grid">
+        <div class="flex flex-col gap-2">
             <p class="text-base font-bold text-white">Terms & Privacy</p>
-            <div class="w-5 h-[2px] bg-[#2286E0]"></div>
+            <div class="w-5 h-[2px] bg-[#2286E0] mt-[13px] mb-[13px]"></div>
             <p class="font-normal text-[15px] text-white">Imprint</p>
             <p class="font-normal text-[15px] text-white">Datenschutz</p>
             <p class="font-normal text-[15px] text-white">Contact</p>
         </div>
-        <div class="grid gap-2 lg:gap-0">
+        <div class="flex flex-col gap-2">
             <p class="text-base font-bold text-white">More Links</p>
-            <div class="w-5 h-[2px] bg-[#2286E0]"></div>
+            <div class="w-5 h-[2px] bg-[#2286E0] mt-[13px] mb-[13px]"></div>
             <p class="font-normal text-[15px] text-white">Lorem ipsum dolor</p>
             <p class="font-normal text-[15px] text-white">Lorem ipsum dolor</p>
             <p class="font-normal text-[15px] text-white">Lorem ipsum </p>
