add css file and do some changes

--- a/indeximg.html
+++ b/indeximg.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="font.css">
 </head>
 <body>
     <section class="flex flex-col justify-start items-start pb-16 sm:pb-0">
@@ -13,7 +14,7 @@
             <header class="flex justify-between items-center px-20 py-6 font-sans">
                 <img class="" src="Layer_1.png" alt="logo">
                 <div class="hidden lg:flex gap-10">
-                    <ul class="font-medium text-[15px] flex items-center gap-12">
+                    <ul class="font-medium  text-[15px] flex items-center gap-12">
                         <li class="text-black hover:text-[#2286E0]"><a href="driver-shaft.html">Home</a></li>
                         <li class="text-black hover:text-[#2286E0]"><a href="fairway-wood-shaft.html">Features</a></li>
                         <li class="text-black hover:text-[#2286E0]"><a href="online-fitting.html">Modules</a></li>
@@ -32,11 +33,11 @@
                 </ul>
             </div>
             <div class="pt-[90px] flex justify-center text-center">
-                <h2 class="text-3xl sm:text-[42px] font-bold">Contact</h2>
+                <h2 id="Contact-text" class="text-3xl sm:text-[42px] font-bold ">Contact</h2>
             </div>
             <div class="grid lg:flex justify-center gap-16 lg:gap-32 pt-20 px-10 lg:px-0">
                 <div class="items-center block sm:flex justify-start lg:justify-center">
-                    <p class="text-xl sm:text-3xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[400px] leading-8 sm:leading-10">Relational data connections create new insights. 
+                    <p id="relation-text" class="font-apercu  text-xl sm:text-3xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[400px] leading-8 sm:leading-10">Relational data connections create new insights. 
                     Information becomes easily accessible with little effort.</p>
                 </div>
                 <img class="max-w-auto lg:max-w-[650px]" alt="jacksparrow" src="image 20 (1).png">
@@ -46,13 +47,13 @@
     <section class="bg-[#111827] block lg:flex justify-center items-center gap-32 pt-16 lg:pt-8 pb-20 lg:pb-0 px-12 lg:px-0 h-auto lg:h-[420px]">
         <img class="max-w-[570px] max-h-[592px]" alt="chatgroup" src="Group 455 (1).png">
         <div class="grid justify-start lg:justify-center items-center">
-            <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-white max-w-4xl lg:max-w-[430px] leading-8 sm:leading-10">Employees, companies and contacts 
+            <p id="text-2" class="text-xl sm:text-2xl md:text-[32px] font-medium text-white max-w-4xl lg:max-w-[430px] leading-8 sm:leading-10">Employees, companies and contacts 
             are connected with each other at a central point, a non-existent view is created.</p>
         </div>
     </section>
     <section class="pt-36 px-8 lg:px-28 lg:px-14 flex flex-col">
         <div class=" pb-10">
-            <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[900px] leading-8 sm:leading-10">Create project lists of your contacts and employees, 
+            <p id="text-3" class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[900px] leading-8 sm:leading-10">Create project lists of your contacts and employees, 
             filter by project participants and their roles. Synchronize contact information with Outlook* and 
             stay up to date.</p>
         </div>
@@ -62,7 +63,7 @@
     </section>
     <section class=" block lg:flex justify-center  pr-8 lg:pr-0 pl-8 lg:pl-24 gap-12 pt-32 lg:pt-20">
         <div class="block lg:flex justify-center items-center mb-12 lg:mb-20 lg:mb-0">
-            <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[580px] leading-8 sm:leading-10">Outlook plugin with a screenshot of outlook for mac. Lorem ipsum dolor sit amet, 
+            <p id="text-3" class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[580px] leading-8 sm:leading-10">Outlook plugin with a screenshot of outlook for mac. Lorem ipsum dolor sit amet, 
             consectetur adipiscing elit quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
             commodo consequat.</p>
         </div>
@@ -75,7 +76,7 @@
             <div class="grid justify-center px-10 lg:px-16 py-16 bg-[#111827] rounded-r-lg rounded-l-lg lg:rounded-l-none">
                 <div class="flex gap-8 items-center justify-center">
                     <img class="hidden lg:block" alt="" src="fi_12581577.png">
-                    <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-white max-w-2xl md:max-w-4xl lg:max-w-[560px] leading-8 sm:leading-10">contacts can be synced to mobile device. Lorem ipsum dolor sit amet, consectetur 
+                    <p id="text-3" class="text-xl sm:text-2xl md:text-[32px] font-medium text-white max-w-2xl md:max-w-4xl lg:max-w-[560px] leading-8 sm:leading-10">contacts can be synced to mobile device. Lorem ipsum dolor sit amet, consectetur 
                     adipiscing elit quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
@@ -84,19 +85,19 @@
     </section>
     <section class="block lg:flex justify-center gap-8 md:gap-32 px-8 lg:px-0">
         <div class="block lg:flex justify-center items-center mb-20 lg:mb-0">
-            <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[540px] leading-8 sm:leading-10">Contact lists / collections can be created "auto-create from tags" like the 
+            <p id="text-3" class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[540px] leading-8 sm:leading-10">Contact lists / collections can be created "auto-create from tags" like the 
             image collections to save time exercitation ullamco laboris nisi ut aliquip consequat.</p>
         </div>
         <img class="max-w-full lg:max-w-[481px] max-h-[481px]" alt="" src="Group 430 (1).png">
     </section>
-    <footer class="grid grid-cols-2 md:grid-cols-3 lg:flex bg-[#111827] justify-center gap-12 md:gap-0 lg:gap-32 py-24 px-16 mt-28">
+    <footer class=" grid grid-cols-2 md:grid-cols-3 lg:flex bg-[#111827] justify-center gap-12 md:gap-0 lg:gap-32 py-24 px-16 mt-40">
         <div>
             <img alt="logo" src="Layer_1 (2).png">
-            <p class="font-normal text-[15px] text-white max-w-[183px] mt-10">Copyright © 2023 Amenda
+            <p id="text-4" class="font-normal text-[15px] text-white max-w-[183px] mt-10">Copyright © 2023 Amenda
             All rights reserved.</p>
         </div>
-        <div class="grid gap-2">
-            <p class="text-base font-bold text-white">Quick Links</p>
+        <div id="text-4" class="grid gap-2">
+            <p id="text-5" class="text-base font-bold text-white">Quick Links</p>
             <div class="w-5 h-[2px] bg-[#2286E0] mb-4 mt-3"></div>
             <p class="font-normal text-[15px] text-white">Home</p>
             <p class="font-normal text-[15px] text-white">Features</p>
@@ -104,14 +105,14 @@
             <p class="font-normal text-[15px] text-white">Benefits</p>
         </div>
         <div class="flex flex-col gap-2">
-            <p class="text-base font-bold text-white">Terms & Privacy</p>
+            <p id="text-5" class="text-base font-bold text-white">Terms & Privacy</p>
             <div class="w-5 h-[2px] bg-[#2286E0] mt-[13px] mb-[13px]"></div>
             <p class="font-normal text-[15px] text-white">Imprint</p>
             <p class="font-normal text-[15px] text-white">Datenschutz</p>
             <p class="font-normal text-[15px] text-white">Contact</p>
         </div>
         <div class="flex flex-col gap-2">
-            <p class="text-base font-bold text-white">More Links</p>
+            <p id="text-5" class="text-base font-bold text-white">More Links</p>
             <div class="w-5 h-[2px] bg-[#2286E0] mt-[13px] mb-[13px]"></div>
             <p class="font-normal text-[15px] text-white">Lorem ipsum dolor</p>
             <p class="font-normal text-[15px] text-white">Lorem ipsum dolor</p>
