--- a/indeximg.html
+++ b/indeximg.html
@@ -8,70 +8,72 @@
     <link rel="stylesheet" href="font.css">
 </head>
 <body>
-    <section class="flex flex-col justify-start items-start pb-16 sm:pb-0">
-        <img class="relative w-full  h-[700px] sm:h-[900px] md:h-[980px] lg:h-[880px]" src="Contact - Details 1.png" alt="background-pic" loading="lazy">
-        <div class="absolute w-full">
-            <header class="flex justify-between items-center px-20 py-6 font-sans">
-                <img class="" src="Layer_1.png" alt="logo">
-                <div class="hidden lg:flex gap-10">
-                    <ul class="font-medium  text-[15px] flex items-center gap-12">
-                        <li class="text-black hover:text-[#2286E0]"><a href="driver-shaft.html">Home</a></li>
-                        <li class="text-black hover:text-[#2286E0]"><a href="fairway-wood-shaft.html">Features</a></li>
-                        <li class="text-black hover:text-[#2286E0]"><a href="online-fitting.html">Modules</a></li>
-                        <li class="text-black hover:text-[#2286E0]"><a href="find-a-fitter.html">Benefits</a></li>
-                    </ul>
-                    <button type="button" class="bg-black hover:bg-transparent text-sm font-bold rounded-[3px] text-white hover:text-black px-6 py-3 border-2 border-black">Get Started</button>
-                </div>
-                <img class="block w-8 h-8 lg:hidden cursor-pointer" src="free-bars-1440391-1216351.png" alt="Menu Icon" id="menu-icon">
-            </header>
-            <div id="mobile-menu" class="hidden lg:hidden bg-black text-white">
-                <ul class="flex flex-col gap-6 text-xs font-bold p-4">
-                    <li class="hover:text-[#2286E0]"><a href="driver-shaft.html">Home</a></li>
-                    <li class="hover:text-[#2286E0]"><a href="fairway-wood-shaft.html">Features</a></li>
-                    <li class="hover:text-[#2286E0]"><a href="online-fitting.html">Modules</a></li>
-                    <li class="hover:text-[#2286E0]"><a href="find-a-fitter.html">Benefits</a></li>
-                </ul>
+    <section class="container mx-auto flex flex-col justify-start items-start pb-16 sm:pb-0">
+        <img class="relative w-full h-[700px] sm:h-[900px] md:h-[980px] lg:h-[820px]" src="Contact - Details 1.png" alt="background-pic" loading="lazy">
+        <div class="absolute">
+          <header class="max-w-[1410px] flex justify-between items-center px-0 py-6 font-sans">
+            <img src="Layer_1.png" alt="logo">
+            <div class="hidden lg:flex gap-10">
+              <ul class="font-medium text-[15px] flex items-center gap-12">
+                <li class="text-black hover:text-[#2286E0]"><a href="driver-shaft.html">Home</a></li>
+                <li class="text-black hover:text-[#2286E0]"><a href="fairway-wood-shaft.html">Features</a></li>
+                <li class="text-black hover:text-[#2286E0]"><a href="online-fitting.html">Modules</a></li>
+                <li class="text-black hover:text-[#2286E0]"><a href="find-a-fitter.html">Benefits</a></li>
+              </ul>
+              <button type="button" class="bg-black hover:bg-transparent text-sm font-bold rounded-[3px] text-white hover:text-black px-6 py-3 border-2 border-black">Get Started</button>
             </div>
+            <img class="block w-8 h-8 lg:hidden cursor-pointer" src="free-bars-1440391-1216351.png" alt="Menu Icon" id="menu-icon">
+          </header>
+          <div id="mobile-menu" class="hidden lg:hidden bg-black text-white">
+            <ul class="flex flex-col gap-6 text-xs font-bold p-4">
+              <li class="hover:text-[#2286E0]"><a href="driver-shaft.html">Home</a></li>
+              <li class="hover:text-[#2286E0]"><a href="fairway-wood-shaft.html">Features</a></li>
+              <li class="hover:text-[#2286E0]"><a href="online-fitting.html">Modules</a></li>
+              <li class="hover:text-[#2286E0]"><a href="find-a-fitter.html">Benefits</a></li>
+            </ul>
+          </div>
+          <div class="container  p-4 lg:p-8">
             <div class="pt-[90px] flex justify-center text-center">
-                <h2 id="Contact-text" class="text-3xl sm:text-[42px] font-bold ">Contact</h2>
+              <h2 id="Contact-text" class="text-3xl sm:text-[42px] font-bold">Contact</h2>
             </div>
             <div class="grid lg:flex justify-center gap-16 lg:gap-32 pt-20 px-10 lg:px-0">
-                <div class="items-center block sm:flex justify-start lg:justify-center">
-                    <p id="relation-text" class="font-apercu  text-xl sm:text-3xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[400px] leading-8 sm:leading-10">Relational data connections create new insights. 
-                    Information becomes easily accessible with little effort.</p>
-                </div>
-                <img class="max-w-auto lg:max-w-[650px]" alt="jacksparrow" src="image 20 (1).png">
+              <div class="items-center block sm:flex justify-start lg:justify-center">
+                <p id="relation-text" class="font-apercu text-xl sm:text-3xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[400px] leading-8 sm:leading-[46px]">Relational data connections create new insights. Information becomes easily accessible with little effort.</p>
+              </div>
+              <img class="max-w-auto lg:max-w-[650px]" alt="jacksparrow" src="image 20 (1).png">
             </div>
+          </div>
         </div>
-    </section>
-    <section class="bg-[#111827] block lg:flex justify-center items-center gap-32 pt-16 lg:pt-8 pb-20 lg:pb-0 px-12 lg:px-0 h-auto lg:h-[420px]">
-        <img class="max-w-[570px] max-h-[592px]" alt="chatgroup" src="Group 455 (1).png">
-        <div class="grid justify-start lg:justify-center items-center">
-            <p id="text-2" class="text-xl sm:text-2xl md:text-[32px] font-medium text-white max-w-4xl lg:max-w-[430px] leading-8 sm:leading-10">Employees, companies and contacts 
-            are connected with each other at a central point, a non-existent view is created.</p>
+      </section>
+      <section class="bg-[#111827] block lg:flex justify-center items-center gap-32 pt-16 lg:pt-8 pb-20 lg:pb-0 px-12 lg:px-0 h-auto lg:h-[420px]">
+        <div class="container mx-auto flex flex-col lg:flex-row justify-center items-center gap-32">
+          <img class="max-w-[570px] max-h-[592px]" alt="chatgroup" src="Group 455 (1).png">
+          <div class="container mx-auto grid justify-start lg:justify-center items-center">
+            <p id="text-2" class="text-xl sm:text-2xl md:text-[32px] font-medium text-white max-w-4xl lg:max-w-[500px] leading-8 sm:leading-10">Employees, companies, and contacts are connected with each other at a central point, a non-existent view is created.</p>
+          </div>
         </div>
-    </section>
-    <section class="pt-36 px-8 lg:px-28 lg:px-14 flex flex-col">
-        <div class=" pb-10">
-            <p id="text-3" class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[900px] leading-8 sm:leading-10">Create project lists of your contacts and employees, 
+      </section>
+    <section class="pt-40 px-8 lg:px-0 flex flex-col">
+        <div class="container mx-auto px-10 pb-8">
+            <p id="text-3" class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[900px] leading-8 sm:leading-[46px]">Create project lists of your contacts and employees, 
             filter by project participants and their roles. Synchronize contact information with Outlook* and 
             stay up to date.</p>
         </div>
         <div class="flex justify-center items-center">
-            <img class="w-full" alt="Rectangle" src="Screenshot 2024-06-25 141840.png">
+            <img class="" alt="Rectangle" src="image_2024_06_28T10_32_53_712Z.png">
         </div>
     </section>
-    <section class=" block lg:flex justify-center  pr-8 lg:pr-0 pl-8 lg:pl-24 gap-12 pt-32 lg:pt-20">
-        <div class="block lg:flex justify-center items-center mb-12 lg:mb-20 lg:mb-0">
-            <p id="text-3" class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[580px] leading-8 sm:leading-10">Outlook plugin with a screenshot of outlook for mac. Lorem ipsum dolor sit amet, 
+    <section class=" block lg:flex justify-center  pr-8 lg:pr-0 pl-8 lg:pl-20 gap-40 pt-32 lg:pt-20">
+        <div class="block lg:flex justify-center items-center mb-12 lg:mb-0">
+            <p id="text-3" class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[580px] leading-8 sm:leading-[46px]">Outlook plugin with a screenshot of outlook for mac. Lorem ipsum dolor sit amet, 
             consectetur adipiscing elit quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
             commodo consequat.</p>
         </div>
-        <img alt="max-w-[400px] max-h-[342px]" src="Group 427 (1).png">
+        <img alt="" src="Group 427 (1).png">
     </section>
     <section class="grid md:flex justify-center lg:justify-start pl-8 lg:pl-16 pr-8 lg:pr-0 pt-32 lg:pt-20 pb-32 lg:pb-0">
        <img class="hidden lg:block relative [473px] max-h-[546px]" alt="mobile" src="Group 1 7.png">
-       <div class="flex justify-center items-center">
+       <div class=" flex justify-center items-center">
         <div class="flex justify-center items-center none lg:absolute right-20 lg:right-60">
             <div class="grid justify-center px-10 lg:px-16 py-16 bg-[#111827] rounded-r-lg rounded-l-lg lg:rounded-l-none">
                 <div class="flex gap-8 items-center justify-center">
@@ -83,37 +85,37 @@
         </div>
     </div>
     </section>
-    <section class="block lg:flex justify-center gap-8 md:gap-32 px-8 lg:px-0">
+    <section class="container max-w-auto block lg:flex justify-center gap-8 md:gap-40 px-8 lg:px-12 max-w-full">
         <div class="block lg:flex justify-center items-center mb-20 lg:mb-0">
-            <p id="text-3" class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[540px] leading-8 sm:leading-10">Contact lists / collections can be created "auto-create from tags" like the 
+            <p id="text-3" class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[540px] leading-8 sm:leading-[46px]">Contact lists / collections can be created "auto-create from tags" like the 
             image collections to save time exercitation ullamco laboris nisi ut aliquip consequat.</p>
         </div>
-        <img class="max-w-full lg:max-w-[481px] max-h-[481px]" alt="" src="Group 430 (1).png">
+        <img class="" alt="" src="Group 430 (1).png">
     </section>
-    <footer class=" grid grid-cols-2 md:grid-cols-3 lg:flex bg-[#111827] justify-center gap-12 md:gap-0 lg:gap-32 py-24 px-16 mt-40">
+    <footer class=" grid grid-cols-2 md:grid-cols-3 lg:flex bg-[#111827] justify-center gap-12 md:gap-0 lg:gap-32 pt-[100px] pb-[135px] px-16 mt-40">
         <div>
             <img alt="logo" src="Layer_1 (2).png">
-            <p id="text-4" class="font-normal text-[15px] text-white max-w-[183px] mt-10">Copyright © 2023 Amenda
+            <p id="text-4" class="font-normal text-[15px] text-white max-w-[183px] mt-[42px]">Copyright © 2023 Amenda
             All rights reserved.</p>
         </div>
-        <div id="text-4" class="grid gap-2">
+        <div id="text-4" class="grid gap-3">
             <p id="text-5" class="text-base font-bold text-white">Quick Links</p>
-            <div class="w-5 h-[2px] bg-[#2286E0] mb-4 mt-3"></div>
+            <div class="w-5 h-[2px] bg-[#2286E0] mb-4 mt-2"></div>
             <p class="font-normal text-[15px] text-white">Home</p>
             <p class="font-normal text-[15px] text-white">Features</p>
             <p class="font-normal text-[15px] text-white">Modules</p>
             <p class="font-normal text-[15px] text-white">Benefits</p>
         </div>
-        <div class="flex flex-col gap-2">
+        <div class="flex flex-col gap-3">
             <p id="text-5" class="text-base font-bold text-white">Terms & Privacy</p>
-            <div class="w-5 h-[2px] bg-[#2286E0] mt-[13px] mb-[13px]"></div>
+            <div class="w-5 h-[2px] bg-[#2286E0] mt-2 mb-[13px]"></div>
             <p class="font-normal text-[15px] text-white">Imprint</p>
             <p class="font-normal text-[15px] text-white">Datenschutz</p>
             <p class="font-normal text-[15px] text-white">Contact</p>
         </div>
-        <div class="flex flex-col gap-2">
+        <div class="flex flex-col gap-3">
             <p id="text-5" class="text-base font-bold text-white">More Links</p>
-            <div class="w-5 h-[2px] bg-[#2286E0] mt-[13px] mb-[13px]"></div>
+            <div class="w-5 h-[2px] bg-[#2286E0] mt-2 mb-[13px]"></div>
             <p class="font-normal text-[15px] text-white">Lorem ipsum dolor</p>
             <p class="font-normal text-[15px] text-white">Lorem ipsum dolor</p>
             <p class="font-normal text-[15px] text-white">Lorem ipsum </p>
@@ -122,6 +124,13 @@
             <img alt="social-icons" src="Frame 318.png">
         </div>
     </footer>
+    <div class="ml-[90px] max-w-[1410px] mx-auto my-auto">
+        <div class="max-w-[273px] absolute mx-auto my-auto"/>
+        <div class="flex items-center bg-[#111827] relative ml-[330px] mt-[100px] gap-[90px]"> 
+        </div>
+        <div class="phone-text max-w-[570px] text-[32px] font-medium leading-[46px] text-white">
+        </div>
+      </div>
     <script src="index.js"></script>
 </body>
 </html>
